# maple

./: Cargo.toml  build.rs
common/: Cargo.toml
common/src/: config.rs  conversion.rs  lib.rs  logging.rs
docs/: INSTALL.md
maple/: Cargo.toml  build.rs
maple/src/: app.rs  client.rs  constants.rs  errors.rs  main.rs  viewmodel.rs
maple/ui/: common.slint  mainwindow.slint
maple/ui/screens/: login.slint  main.slint
maple/ui/screens/main/: main.slint  menu.slint  menuitem.slint
maple/ui/widgets/: button.slint
plextvapi/: Cargo.toml
plextvapi/src/: apiclient.rs  constants.rs  errors.rs  gen_errors_enum.py  lib.rs  plextvclient.rs  serverclient.rs  types.rs
qml/: main.qml  mpv.qml
src/: appstate.rs  config.rs  logging.rs  main.rs
src/client/: client.rs  mod.rs  plextvclient.rs  types.rs
src/cpp/: mpvobject.cpp  mpvobject.h  mpvobject.moc.cpp
src/network/: mod.rs  network.rs  plextvclient.rs  types.rs
src/qml/: main.qml  mpv.qml
src/qml/elements/: Button.qml  Style.qml  UserBlock.qml  qmldir
src/qml/views/: LoginView.qml  MainView.qml  createView.js  qmldir
src/ui/: dispatcher.rs  mod.rs  qt.rs  render.rs  scaffolding.rs
