[package]
name = "maple"
version = "0.1.0"
authors = ["Tamás Szelei <szelei.t@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
anyhow = "1.0.31"
reqwest = { version = "0.10.6", features = ["json"] }
tokio = { version = "0.2.21", features = ["rt-core", "rt-threaded", "macros", "net"] }
webbrowser = "0.5.4"
tokio-timer = "0.2.13"
log = "0.4.11"
fern = { version = "0.6.0", features = ["colored"] }
chrono = "0.4.13"
cpp = "0.5.6"
cstr = "0.2.8"
qmetaobject = "0.2.2"
qttypes = { version = "0.2.2", features = ["qtquick", "required"] }

[build-dependencies]
cpp_build = "0.5.6"
semver = "1.0.3"