[package]
name = "maple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
plextvapi = { path = "../plextvapi" }
flume = "^0.10.11"
log = "^0.4.14"
slint = "0.2.0"
tokio = { version = "^1.17.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.55"
webbrowser = "0.6.0"

[build-dependencies]
slint-build = "0.2.0"
